# harden-stump

./: .dockerignore  .gitignore  .rustfmt.toml  Cargo.toml  README.md  package.json  playwright.config.ts  prettier.config.js
apps/desktop/: package.json
apps/expo/: package.json
apps/server/: Cargo.toml
apps/server/src/: errors.rs  http_server.rs  lib.rs  main.rs
apps/server/src/cli/: mod.rs  setup.rs
apps/server/src/config/: cors.rs  jwt.rs  jwt_manager.rs  jwt_rs256.rs  mod.rs  state.rs
apps/server/src/config/session/: cleanup.rs  mod.rs  store.rs
apps/server/src/middleware/: auth.rs  mod.rs  rate_limit.rs  server_lock.rs
apps/server/src/routers/: mod.rs  server.rs  utoipa.rs  ws.rs
apps/server/src/routers/api/: mod.rs
apps/server/src/routers/api/filters/: library.rs  library_acl.rs  media.rs  mod.rs
apps/server/src/routers/api/v1/: auth.rs  crypto_audit.rs  job.rs  library.rs  log.rs  mod.rs  series.rs  user.rs
apps/server/src/routers/api/v1/media/: bulk.rs  individual.rs  thumbnails.rs
apps/server/src/routers/api/v1/secure_library/: access.rs  admin.rs  catalog.rs  content.rs  delete.rs  helpers.rs  list.rs  mod.rs  tests.rs  types.rs
apps/server/src/routers/opds/: v1_2.rs  v2_0.rs
apps/server/src/secure/: audit.rs  fs.rs  mod.rs
apps/server/src/utils/: argon2_auth.rs  auth.rs  mod.rs  test_utils.rs
apps/web/: package.json  vite.config.ts
apps/web/src/: App.tsx
apps/web/src/shims/: argon2-browser.ts
core/: Cargo.toml
core/integration-tests/: Cargo.toml
core/integration-tests/tests/: lib.rs  scanner.rs  secure_encryption_job_queue.rs  secure_encryption_job_retry.rs  secure_jobs_concurrency.rs  secure_libraries_endpoints.rs  secure_libraries_list_endpoint.rs  secure_library.rs  secure_library_path_lifecycle.rs  secure_rescan.rs  secure_smk_verification.rs
core/prisma/: schema.prisma
core/prisma/migrations/20251102124957_add_secure_library_models/: migration.sql
core/prisma/migrations/20251218120000_add_refresh_tokens/: migration.sql
core/src/: context.rs  error.rs  lib.rs
core/src/backup/: encryption.rs  manifest.rs  mod.rs  restore.rs  service.rs
core/src/config/: stump_config.rs
core/src/crypto/: encrypt.rs  errors.rs  keys.rs  mod.rs  smk.rs  types.rs  user_keys.rs
core/src/crypto/services/: access_control.rs  audit.rs  encryption_task.rs  key_management.rs  mod.rs  secure_library.rs  user_keypair.rs
core/src/db/: admin.rs  client.rs  diesel_conn.rs  encrypted.rs  migrations.rs  mod.rs  setup.rs
core/src/db/dao/: series_dao.rs
core/src/db/entity/: common.rs  crypto_audit.rs  job.rs  mod.rs  revoked_jwt.rs  secure_library.rs
core/src/db/entity/user/: entity.rs
core/src/db/filter/: smart_filter.rs
core/src/db/query/: library_acl.rs  mod.rs  secure_library_access.rs  secure_library_access_tests.rs
core/src/filesystem/: archive.rs  common.rs  content_type.rs  decryption_cache.rs  decryption_integration_tests.rs  decryption_middleware.rs  encrypted_file.rs  error.rs  file_migration_job.rs  hash.rs  key_timeout_service.rs  mod.rs
core/src/filesystem/image/thumbnail/: generation_job.rs  utils.rs
core/src/filesystem/media/: builder.rs  process.rs
core/src/filesystem/media/format/: epub.rs  pdf.rs  rar.rs  zip.rs
core/src/filesystem/scanner/: library_scan_job.rs  library_watcher.rs  options.rs  series_scan_job.rs  utils.rs  walk.rs
core/src/job/: manager.rs  mod.rs  progress.rs  scheduler.rs
core/src/opds/v1_2/: entry.rs
core/src/opds/v2_0/: link.rs  publication.rs
core/src/security/: audit.rs  mod.rs  tests.rs
core/src/test/: mod.rs
core/src/test/integration/: encryption_system.rs  mod.rs
crates/cli/: Cargo.toml
crates/cli/src/: error.rs
crates/cli/src/commands/: account.rs  system.rs
crates/stump-crypto/: Cargo.toml
crates/stump-crypto/src/: decrypt.rs  encrypt.rs  error.rs  key.rs  lib.rs
docker/: Dockerfile
docs/: diesel-sqlcipher.md  macos-sqlcipher-setup.md
docs/pages/guides/: _meta.ts  cli.mdx  index.md  opds.mdx
docs/pages/guides/access-control/: _meta.ts  library-exclusions.mdx
docs/pages/guides/basics/: libraries.mdx
docs/pages/guides/configuration/: theming.mdx
docs/pages/guides/secure-libraries/: _meta.ts  access-control.mdx  index.mdx  setup.mdx  troubleshooting.mdx  usage.mdx
tests/playwright/: README.md  secure-broken.spec.ts  secure-delete.spec.ts  secure-unlock.spec.ts
